k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket
  namespace: development
spec:
  selector:
    app: socket
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
