k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  tls:
  - hosts:
    - socket.app.cubiehome.net
    secretName: socket-app-cubiehome-net-tls
  rules:
  - host: socket.app.cubiehome.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: socket
            port:
              number: 3000
